<resources>
    <string name="app_name">Group2_Final_Project</string>
    <string name="skip">Skip</string>
    <string name="choose_a_profile_picture">Choose a Profile Picture</string>
    <string name="so_why_not_upload_a_profile_picture">So why not upload a profile picture?</string>
    <string name="i_know_that_you_look_awesome">I know that you look awesome.</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up_here">Sign Up \nHere!</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="already_a_user">Already a user?</string>
    <string name="login_here">Login Here</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up_btnn">Sign Up Here</string>
    <string name="default_web_client_id">900500491704-ptavdjip6kjk3p2ofjnpephfg4shbdt1.apps.googleusercontent.com</string>
    <string name="your_quizzes">Your Quizzes</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="title_activity_main111">MainActivity111</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="profile_title">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="quiz_overview">Quiz Overview</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="total_options">Total options</string>
    <string name="enter_your_question_text">Enter your question text</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">Quiz Hero is an innovative Android application designed to facilitate engaging and interactive quizzes for users of all ages. The app aims to provide a fun and educational platform for individuals to test their knowledge across various subjects while also serving as a learning tool.  Quiz Hero aims to revolutionize the way people engage with quizzes by providing a user-friendly, educational, and entertaining platform. With its diverse features and user-centric approach, the app endeavors to make learning an enjoyable experience for everyone. </string>
    <string name="member_one"></string>
    <string name="member_two"></string>
    <string name="member_three"></string>
    <string name="member_four"></string>
    <string name="save_changes">Save Changes</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_details">USER DETAILS</string>
    <string name="security">SECURITY</string>
    <string name="log_out">Log Out</string>
    <string name="quiz_completed">Quiz Completed</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_score">Your Score</string>
    <string name="you_have_earned">You have earned</string>
    <string name="quizzes_done">Quizzes Done</string>
    <string name="home">Home</string>
    <string name="edit_personal_details">Edit personal details</string>
</resources>